# zuiveringsmodel

./: .gitignore  README.md  main.ipynb  setup.cfg
data/: influent.csv
run/: test.ipynb  test.py  test_df.csv  zuivering_doorrekenen.ipynb
src/model_zuivering/: tanks.py  water.py  zuivering.py
