[metadata]
name = model_zuivering
version = 0.0.1
author = Jits Schilperoort
author_email = j.schilperoort@hetwaterschapshuis.nl
description = Een STERK versimpeld model dat de stikstofverwijdering in een rwzi nabootst
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JSchilperoort/zuiveringsmodel
project_urls =
    Bug Tracker = https://github.com/JSchilperoort/zuiveringsmodel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src